@@ -211,7 +211,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="174">
+    <Units Count="173">
       <Unit0>
         <Filename Value="CaniNES.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -907,180 +907,175 @@
         <UnitName Value="NES.Mapper_Sachen8259"/>
       </Unit138>
       <Unit139>
-        <Filename Value="core/mappers/nes.mapper_036.pas"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="NES.Mapper_036"/>
-      </Unit139>
-      <Unit140>
         <Filename Value="core/mappers/nes.mapper_087.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_087"/>
-      </Unit140>
-      <Unit141>
+      </Unit139>
+      <Unit140>
         <Filename Value="core/mappers/nes.mapper_033.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_033"/>
-      </Unit141>
-      <Unit142>
+      </Unit140>
+      <Unit141>
         <Filename Value="core/mappers/nes.mapper_080.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_080"/>
-      </Unit142>
-      <Unit143>
+      </Unit141>
+      <Unit142>
         <Filename Value="core/mappers/nes.mapper_112.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_112"/>
-      </Unit143>
-      <Unit144>
+      </Unit142>
+      <Unit143>
         <Filename Value="core/mappers/nes.mapper_048.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_048"/>
-      </Unit144>
-      <Unit145>
+      </Unit143>
+      <Unit144>
         <Filename Value="core/mappers/nes.mapper_168.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_168"/>
-      </Unit145>
-      <Unit146>
+      </Unit144>
+      <Unit145>
         <Filename Value="core/mappers/nes.mapper_184.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_184"/>
-      </Unit146>
-      <Unit147>
+      </Unit145>
+      <Unit146>
         <Filename Value="core/mappers/nes.mapper_156.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_156"/>
-      </Unit147>
-      <Unit148>
+      </Unit146>
+      <Unit147>
         <Filename Value="core/mappers/nes.mapper_177.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_177"/>
-      </Unit148>
-      <Unit149>
+      </Unit147>
+      <Unit148>
         <Filename Value="core/mappers/nes.mapper_037.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_037"/>
-      </Unit149>
-      <Unit150>
+      </Unit148>
+      <Unit149>
         <Filename Value="core/mappers/nes.mapper_093.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_093"/>
-      </Unit150>
-      <Unit151>
+      </Unit149>
+      <Unit150>
         <Filename Value="core/mappers/nes.mapper_067.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_067"/>
-      </Unit151>
-      <Unit152>
+      </Unit150>
+      <Unit151>
         <Filename Value="core/mappers/nes.mapper_065.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_065"/>
-      </Unit152>
-      <Unit153>
+      </Unit151>
+      <Unit152>
         <Filename Value="basement/basement.font.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Basement.Font"/>
-      </Unit153>
-      <Unit154>
+      </Unit152>
+      <Unit153>
         <Filename Value="basement/basement.timing.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Basement.Timing"/>
-      </Unit154>
-      <Unit155>
+      </Unit153>
+      <Unit154>
         <Filename Value="basement/graphics32.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Graphics32"/>
-      </Unit155>
-      <Unit156>
+      </Unit154>
+      <Unit155>
         <Filename Value="basement/graphics32.lowlevel.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Graphics32.LowLevel"/>
-      </Unit156>
-      <Unit157>
+      </Unit155>
+      <Unit156>
         <Filename Value="core/mappers/nes.mapper_268.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_268"/>
-      </Unit157>
-      <Unit158>
+      </Unit156>
+      <Unit157>
         <Filename Value="core/mappers/nes.mapper_038.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_038"/>
-      </Unit158>
-      <Unit159>
+      </Unit157>
+      <Unit158>
         <Filename Value="core/mappers/nes.mapper_073.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_073"/>
-      </Unit159>
-      <Unit160>
+      </Unit158>
+      <Unit159>
         <Filename Value="core/mappers/nes.mapper_078.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_078"/>
-      </Unit160>
-      <Unit161>
+      </Unit159>
+      <Unit160>
         <Filename Value="core/mappers/nes.mapper_190.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_190"/>
-      </Unit161>
-      <Unit162>
+      </Unit160>
+      <Unit161>
         <Filename Value="core/mappers/nes.mapper_180.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_180"/>
-      </Unit162>
-      <Unit163>
+      </Unit161>
+      <Unit162>
         <Filename Value="core/mappers/nes.mapper_521.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_521"/>
-      </Unit163>
-      <Unit164>
+      </Unit162>
+      <Unit163>
         <Filename Value="core/mappers/nes.mapper_193.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_193"/>
-      </Unit164>
-      <Unit165>
+      </Unit163>
+      <Unit164>
         <Filename Value="shell/bookmarkmanager.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="BookmarkManager"/>
-      </Unit165>
-      <Unit166>
+      </Unit164>
+      <Unit165>
         <Filename Value="shell/menupage.bookmarkbrowser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MenuPage.BookmarkBrowser"/>
-      </Unit166>
-      <Unit167>
+      </Unit165>
+      <Unit166>
         <Filename Value="basement/basement.unzip.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Basement.UnZip"/>
-      </Unit167>
-      <Unit168>
+      </Unit166>
+      <Unit167>
         <Filename Value="basement/basement.filecollection.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Basement.FileCollection"/>
-      </Unit168>
-      <Unit169>
+      </Unit167>
+      <Unit168>
         <Filename Value="shell/menubar.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Menubar"/>
-      </Unit169>
-      <Unit170>
+      </Unit168>
+      <Unit169>
         <Filename Value="basement/graphics32.extra.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Graphics32.Extra"/>
-      </Unit170>
-      <Unit171>
+      </Unit169>
+      <Unit170>
         <Filename Value="basement/graphics32.freetype.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Graphics32.FreeType"/>
-      </Unit171>
-      <Unit172>
+      </Unit170>
+      <Unit171>
         <Filename Value="shell/menupage.aboutdialog.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MenuPage.AboutDialog"/>
-      </Unit172>
-      <Unit173>
+      </Unit171>
+      <Unit172>
         <Filename Value="core/mappers/nes.mapper_082.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NES.Mapper_082"/>
-      </Unit173>
+      </Unit172>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
